// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CoursesList Component renders courses with different progress states 1`] = `
<div>
  <div
    class="grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 gap-4"
  >
    <a
      href="/courses/course-1"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Programming
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                3
                 
                Chapters
              </span>
            </div>
          </div>
          <div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="relative w-full overflow-hidden rounded-full bg-secondary h-2"
              data-max="100"
              data-state="indeterminate"
              role="progressbar"
            >
              <div
                class="h-full w-full flex-1 transition-all bg-sky-600"
                data-max="100"
                data-state="indeterminate"
                style="transform: translateX(-100%);"
              />
            </div>
            <p
              class="font-medium mt-2 text-sky-700 text-xs"
            >
              0
              % Complete
            </p>
          </div>
        </div>
      </div>
    </a>
    <a
      href="/courses/course-2"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Programming
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                3
                 
                Chapters
              </span>
            </div>
          </div>
          <div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="relative w-full overflow-hidden rounded-full bg-secondary h-2"
              data-max="100"
              data-state="indeterminate"
              role="progressbar"
            >
              <div
                class="h-full w-full flex-1 transition-all bg-sky-600"
                data-max="100"
                data-state="indeterminate"
                style="transform: translateX(-50%);"
              />
            </div>
            <p
              class="font-medium mt-2 text-sky-700 text-xs"
            >
              50
              % Complete
            </p>
          </div>
        </div>
      </div>
    </a>
    <a
      href="/courses/course-3"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Programming
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                3
                 
                Chapters
              </span>
            </div>
          </div>
          <div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="relative w-full overflow-hidden rounded-full bg-secondary h-2"
              data-max="100"
              data-state="indeterminate"
              role="progressbar"
            >
              <div
                class="h-full w-full flex-1 transition-all bg-emerald-700"
                data-max="100"
                data-state="indeterminate"
                style="transform: translateX(-0%);"
              />
            </div>
            <p
              class="font-medium mt-2 text-emerald-700 text-xs"
            >
              100
              % Complete
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`CoursesList Component renders courses with null category 1`] = `
<div>
  <div
    class="grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 gap-4"
  >
    <a
      href="/courses/course-1"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          />
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                3
                 
                Chapters
              </span>
            </div>
          </div>
          <p
            class="text-md md:text-sm font-medium text-slate-700"
          >
            $99.99
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`CoursesList Component renders courses with varying chapter counts 1`] = `
<div>
  <div
    class="grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 gap-4"
  >
    <a
      href="/courses/course-1"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Programming
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                1
                 
                Chapter
              </span>
            </div>
          </div>
          <p
            class="text-md md:text-sm font-medium text-slate-700"
          >
            $99.99
          </p>
        </div>
      </div>
    </a>
    <a
      href="/courses/course-2"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Programming
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                10
                 
                Chapters
              </span>
            </div>
          </div>
          <p
            class="text-md md:text-sm font-medium text-slate-700"
          >
            $99.99
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`CoursesList Component renders empty courses list 1`] = `
<div>
  <div
    class="grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 gap-4"
  />
  <div
    class="text-center text-sm text-muted-foreground mt-10"
  >
    No courses found
  </div>
</div>
`;

exports[`CoursesList Component renders multiple courses 1`] = `
<div>
  <div
    class="grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 gap-4"
  >
    <a
      href="/courses/course-1"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Programming
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                3
                 
                Chapters
              </span>
            </div>
          </div>
          <p
            class="text-md md:text-sm font-medium text-slate-700"
          >
            $99.99
          </p>
        </div>
      </div>
    </a>
    <a
      href="/courses/course-2"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Advanced JavaScript"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Advanced JavaScript
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            JavaScript
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                2
                 
                Chapters
              </span>
            </div>
          </div>
          <p
            class="text-md md:text-sm font-medium text-slate-700"
          >
            $149.99
          </p>
        </div>
      </div>
    </a>
    <a
      href="/courses/course-3"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Node.js Fundamentals"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Node.js Fundamentals
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Backend
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                1
                 
                Chapter
              </span>
            </div>
          </div>
          <div>
            <div
              aria-valuemax="100"
              aria-valuemin="0"
              class="relative w-full overflow-hidden rounded-full bg-secondary h-2"
              data-max="100"
              data-state="indeterminate"
              role="progressbar"
            >
              <div
                class="h-full w-full flex-1 transition-all bg-sky-600"
                data-max="100"
                data-state="indeterminate"
                style="transform: translateX(-50%);"
              />
            </div>
            <p
              class="font-medium mt-2 text-sky-700 text-xs"
            >
              50
              % Complete
            </p>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`CoursesList Component renders single course 1`] = `
<div>
  <div
    class="grid sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-4 gap-4"
  >
    <a
      href="/courses/course-1"
    >
      <div
        class="group hover:shadow-sm transition overflow-hidden border rounded-lg p-3 h-full"
      >
        <div
          class="relative w-full aspect-video rounded-md overflow-hidden"
        >
          <img
            alt="Introduction to React"
            class="object-cover"
            src="/course-image.jpg"
          />
        </div>
        <div
          class="flex flex-col pt-2"
        >
          <div
            class="text-lg md:text-base font-medium group-hover:text-sky-700 transition line-clamp-2"
          >
            Introduction to React
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Programming
          </p>
          <div
            class="my-3 flex items-center gap-x-2 text-sm md:text-xs"
          >
            <div
              class="flex items-center gap-x-1 text-slate-500"
            >
              <div
                class="rounded-full flex items-center justify-center bg-sky-100 p-1"
              >
                <svg
                  class="text-sky-700 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"
                  />
                  <path
                    d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"
                  />
                </svg>
              </div>
              <span>
                3
                 
                Chapters
              </span>
            </div>
          </div>
          <p
            class="text-md md:text-sm font-medium text-slate-700"
          >
            $99.99
          </p>
        </div>
      </div>
    </a>
  </div>
</div>
`;
